updated code and photo upload and pdf upload thing
